@@ -6,7 +6,3 @@ kubuntu-desktop
 edubuntu-desktop
 xubuntu-desktop
 gobuntu-desktop
-# postgresql should be keept
-^postgresql-.*
-openssh-blacklist
-openssh-blacklist-extra
